use fapi_url instead of fapi_key

--- a/docs/components/authentication/sign-in.mdx
+++ b/docs/components/authentication/sign-in.mdx
@@ -159,7 +159,7 @@ function mountSignIn(node: HTMLDivElement, props?: SignInProps): void;
     async
     crossorigin="anonymous"
     data-clerk-publishable-key="{{pub_key}}"
-    src="https://{{fapi_key}}/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
+    src="https://{{fapi_url}}/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
     type="text/javascript"
   ></script>
 
@@ -228,7 +228,7 @@ function unmountSignIn(node: HTMLDivElement): void;
     async
     crossorigin="anonymous"
     data-clerk-publishable-key="{{pub_key}}"
-    src="https://{{fapi_key}}/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
+    src="https://{{fapi_url}}/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
     type="text/javascript"
   ></script>
 
@@ -287,7 +287,7 @@ function openSignIn(props?: SignInProps): void;
     async
     crossorigin="anonymous"
     data-clerk-publishable-key="{{pub_key}}"
-    src="https://{{fapi_key}}/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
+    src="https://{{fapi_url}}/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
     type="text/javascript"
   ></script>
 
@@ -337,7 +337,7 @@ function closeSignIn(): void;
     async
     crossorigin="anonymous"
     data-clerk-publishable-key="{{pub_key}}"
-    src="https://{{fapi_key}}/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
+    src="https://{{fapi_url}}/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
     type="text/javascript"
   ></script>
 
