--- a/docs/references/javascript/user/user.mdx
+++ b/docs/references/javascript/user/user.mdx
@@ -125,7 +125,7 @@ In the following example, the user's first name is updated to "Test".
     async
     crossorigin="anonymous"
     data-clerk-publishable-key="{{pub_key}}"
-    src="https://{{fapi_key}}/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
+    src="https://{{fapi_url}}/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
     type="text/javascript"
   ></script>
 
@@ -197,7 +197,7 @@ function delete: () => Promise<void>;
     async
     crossorigin="anonymous"
     data-clerk-publishable-key="{{pub_key}}"
-    src="https://{{fapi_key}}/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
+    src="https://{{fapi_url}}/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
     type="text/javascript"
   ></script>
 
@@ -328,7 +328,7 @@ function setProfileImage: (params: SetProfileImageParams) => Promise<ImageResour
       async
       crossorigin="anonymous"
       data-clerk-publishable-key="{{pub_key}}"
-      src="https://{{fapi_key}}/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
+      src="https://{{fapi_url}}/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
       type="text/javascript"
     ></script>
 
@@ -398,7 +398,7 @@ function reload: (p?: ClerkResourceReloadParams) => Promise<this>;
     async
     crossorigin="anonymous"
     data-clerk-publishable-key="{{pub_key}}"
-    src="https://{{fapi_key}}/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
+    src="https://{{fapi_url}}/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
     type="text/javascript"
   ></script>
 
@@ -464,7 +464,7 @@ function getSessions: () => Promise<SessionWithActivities[]>;
     async
     crossorigin="anonymous"
     data-clerk-publishable-key="{{pub_key}}"
-    src="https://{{fapi_key}}/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
+    src="https://{{fapi_url}}/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
     type="text/javascript"
   ></script>
 
@@ -564,7 +564,7 @@ function getOrganizationInvitations: (params?: GetUserOrganizationInvitationsPar
     async
     crossorigin="anonymous"
     data-clerk-publishable-key="{{pub_key}}"
-    src="https://{{fapi_key}}/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
+    src="https://{{fapi_url}}/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
     type="text/javascript"
   ></script>
 
@@ -650,7 +650,7 @@ function getOrganizationSuggestions: (params?: GetUserOrganizationSuggestionsPar
     async
     crossorigin="anonymous"
     data-clerk-publishable-key="{{pub_key}}"
-    src="https://{{fapi_key}}/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
+    src="https://{{fapi_url}}/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
     type="text/javascript"
   ></script>
 
@@ -735,7 +735,7 @@ function getOrganizationMemberships: (params?: GetUserOrganizationMembershipPara
     async
     crossorigin="anonymous"
     data-clerk-publishable-key="{{pub_key}}"
-    src="https://{{fapi_key}}/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
+    src="https://{{fapi_url}}/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
     type="text/javascript"
   ></script>
 
