--- a/docs/advanced-usage/using-proxies.mdx
+++ b/docs/advanced-usage/using-proxies.mdx
@@ -246,7 +246,7 @@ To configure your proxy setup using environment variables, your `.env.local` fil
             async
             crossorigin="anonymous"
             data-clerk-publishable-key="{{pub_key}}"
-            src="https://{{fapi_key}}/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
+            src="https://{{fapi_url}}/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
             type="text/javascript"
           ></script>
 
