--- a/docs/components/organization/create-organization.mdx
+++ b/docs/components/organization/create-organization.mdx
@@ -131,7 +131,7 @@ function mountCreateOrganization(node: HTMLDivElement, props?: CreateOrganizatio
     async
     crossorigin="anonymous"
     data-clerk-publishable-key="{{pub_key}}"
-    src="https://{{fapi_key}}/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
+    src="https://{{fapi_url}}/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
     type="text/javascript"
   ></script>
 
@@ -200,7 +200,7 @@ function unmountCreateOrganization(node: HTMLDivElement): void;
     async
     crossorigin="anonymous"
     data-clerk-publishable-key="{{pub_key}}"
-    src="https://{{fapi_key}}/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
+    src="https://{{fapi_url}}/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
     type="text/javascript"
   ></script>
 
@@ -269,7 +269,7 @@ function openCreateOrganization(props?: CreateOrganizationProps): void;
     async
     crossorigin="anonymous"
     data-clerk-publishable-key="{{pub_key}}"
-    src="https://{{fapi_key}}/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
+    src="https://{{fapi_url}}/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
     type="text/javascript"
   ></script>
 
@@ -332,7 +332,7 @@ function closeCreateOrganization(): void;
     async
     crossorigin="anonymous"
     data-clerk-publishable-key="{{pub_key}}"
-    src="https://{{fapi_key}}/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
+    src="https://{{fapi_url}}/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
     type="text/javascript"
   ></script>
 
