--- a/docs/components/user/user-profile.mdx
+++ b/docs/components/user/user-profile.mdx
@@ -135,7 +135,7 @@ function mountUserProfile(node: HTMLDivElement, props?: UserProfileProps): void;
     async
     crossorigin="anonymous"
     data-clerk-publishable-key="{{pub_key}}"
-    src="https://{{fapi_key}}/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
+    src="https://{{fapi_url}}/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
     type="text/javascript"
   ></script>
 
@@ -204,7 +204,7 @@ function unmountUserProfile(node: HTMLDivElement): void;
     async
     crossorigin="anonymous"
     data-clerk-publishable-key="{{pub_key}}"
-    src="https://{{fapi_key}}/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
+    src="https://{{fapi_url}}/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
     type="text/javascript"
   ></script>
 
@@ -273,7 +273,7 @@ function openUserProfile(props?: UserProfileProps): void;
     async
     crossorigin="anonymous"
     data-clerk-publishable-key="{{pub_key}}"
-    src="https://{{fapi_key}}/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
+    src="https://{{fapi_url}}/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
     type="text/javascript"
   ></script>
 
@@ -332,7 +332,7 @@ function closeUserProfile(): void;
     async
     crossorigin="anonymous"
     data-clerk-publishable-key="{{pub_key}}"
-    src="https://{{fapi_key}}/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
+    src="https://{{fapi_url}}/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
     type="text/javascript"
   ></script>
 
