--- a/docs/references/javascript/organization/members.mdx
+++ b/docs/references/javascript/organization/members.mdx
@@ -388,7 +388,7 @@ The following example demonstrates how to use the organization membership method
         async
         crossorigin="anonymous"
         data-clerk-publishable-key="{{pub_key}}"
-        src="https://{{fapi_key}}/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
+        src="https://{{fapi_url}}/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
         type="text/javascript"
       ></script>
 
