--- a/docs/references/javascript/user/password-management.mdx
+++ b/docs/references/javascript/user/password-management.mdx
@@ -129,7 +129,7 @@ function updatePassword: (params: UpdateUserPasswordParams) => Promise<User>;
       async
       crossorigin="anonymous"
       data-clerk-publishable-key="{{pub_key}}"
-      src="https://{{fapi_key}}/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
+      src="https://{{fapi_url}}/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
       type="text/javascript"
     ></script>
 
@@ -277,7 +277,7 @@ function removePassword: (params: RemoveUserPasswordParams) => Promise<User>;
       async
       crossorigin="anonymous"
       data-clerk-publishable-key="{{pub_key}}"
-      src="https://{{fapi_key}}/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
+      src="https://{{fapi_url}}/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
       type="text/javascript"
     ></script>
 
