--- a/docs/users/metadata.mdx
+++ b/docs/users/metadata.mdx
@@ -614,7 +614,7 @@ Updating this value overrides the previous value; it does not merge. To perform 
         async
         crossorigin="anonymous"
         data-clerk-publishable-key="{{pub_key}}"
-        src="https://{{fapi_key}}/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
+        src="https://{{fapi_url}}/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
         type="text/javascript"
       ></script>
 
